# info-beamer-quantum-werewolf

./: .gitignore  Cargo.toml  README.md  data.json  node.lua  run.sh
src/: main.rs
